[Home]

Summary:ASTERISK-28198: res_ari: Add new hangup causes for ARI Channel DELETE command
Reporter:Sebastian Damm (sdamm)Labels:
Date Opened:2018-12-06 10:58:19.000-0600Date Closed:2018-12-19 05:13:28.000-0600
Priority:MinorRegression?No
Status:Closed/CompleteComponents:Resources/res_ari Resources/res_ari_channels
Versions:GIT Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:Currently, ARI Channel DELETE supports only five hangup causes. I'll send a patch to add more hangup causes needed for more complex telephony scenarios
Comments:By: Asterisk Team (asteriskteam) 2018-12-06 10:58:21.150-0600

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

By: Friendly Automation (friendly-automation) 2018-12-19 05:13:29.110-0600

Change 10753 merged by Friendly Automation:
res/res_ari: Add additional hangup reasons

[https://gerrit.asterisk.org/10753|https://gerrit.asterisk.org/10753]

By: Friendly Automation (friendly-automation) 2018-12-19 05:15:54.482-0600

Change 10752 merged by Joshua C. Colp:
res/res_ari: Add additional hangup reasons

[https://gerrit.asterisk.org/10752|https://gerrit.asterisk.org/10752]